--- a/templates/security/password_recovery_second.html.twig
+++ b/templates/security/password_recovery_second.html.twig
@@ -36,13 +36,13 @@
                 <a class="mx-auto" href="{{ path('app_resend_password_recovery_mail') }}">{% trans %}Didn't get the letter?{% endtrans %}</a>
             {{ form_end(form) }}
             <script>
-                var recovery_code = document.getElementById("password_recovery_second_form_recovery_code");
-                var events = ['input', 'change', 'blur', 'keyup'];
-                for (var i in events) {
+                const recovery_code = document.getElementById("password_recovery_second_form_recovery_code");
+                const events = ['input', 'change', 'blur', 'keyup'];
+                for (let i in events) {
                     recovery_code.addEventListener(events[i], format, false);
                 }
                 function format() {
-                    var formatted_code = this.value.toUpperCase();
+                    let formatted_code = this.value.toUpperCase();
                     formatted_code = formatted_code.replace(/[^0-9]/g, "").substring(0, 6);
                     this.value = formatted_code;
                 }
