Refactor translations, translate account_settings

--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -1,3 +1,4 @@
+{% trans_default_domain 'header' %}
 <header class="py-4 bg-white shadow-sm">
     <div class="container px-4 mx-auto flex justify-between">
         <span class="font-logo text-2xl text-blue-500">Runotab</span>
