--- a/templates/security/email_verification_mail.html.twig
+++ b/templates/security/email_verification_mail.html.twig
@@ -1,3 +1,4 @@
+{% trans_default_domain 'email_verification_mail' %}
 {{ full_name }}, <br><br>
 
 {% trans %}To continue registering in Runotab, use this code{% endtrans %}: <br>
