--- a/templates/security/password_recovery_mail.html.twig
+++ b/templates/security/password_recovery_mail.html.twig
@@ -1,3 +1,4 @@
+{% trans_default_domain 'password_recovery_mail' %}
 {{ full_name }}, <br><br>
 
 {% trans %}To continue restoring password in Runotab, use this code{% endtrans %}: <br>
