--- a/templates/account_settings/index.html.twig
+++ b/templates/account_settings/index.html.twig
@@ -1,3 +1,4 @@
+{% trans_default_domain 'account_settings' %}
 {% extends 'base.html.twig' %}
 
 {% block title %}{% trans %}Account settings{% endtrans %}{% endblock %}
@@ -21,7 +22,7 @@
             </div>
             {{ form_start(select_avatar_photo_form, {'attr': {'class': 'inline'}}) }}
                 {{ form_widget(select_avatar_photo_form.photo, {'attr': {'class': 'hidden'}}) }}
-                {{ form_label(select_avatar_photo_form.photo, 'Select a new photo', {'label_attr': {'class': 'rounded-full bg-gray-500 hover:bg-gray-600 cursor-pointer py-1 w-1/6 inline-block text-xl font-bold text-center text-white'}}) }}
+                {{ form_label(select_avatar_photo_form.photo, null, {'label_attr': {'class': 'rounded-full bg-gray-500 hover:bg-gray-600 cursor-pointer py-1 w-1/6 inline-block text-xl font-bold text-center text-white'}}) }}
 
                 <button type="submit" id="select_avatar_photo_form_submit" class="hidden ml-6 bg-blue-400 hover:bg-blue-500 py-1 rounded-full text-white font-bold text-xl w-1/6 mx-auto focus:outline-none">{% trans %}Save{% endtrans %}</button>
             {{ form_end(select_avatar_photo_form) }}
@@ -34,7 +35,7 @@
             {# Invitations #}
             <h2 class="text-3xl font-medium text-gray-400 mb-4">{% trans %}Invitations{% endtrans %}:</h2>
             <div>
-                <h3 class="text-2xl font-semibold inline-block">{% trans %}You can invite{% endtrans %} {% trans with {'users': app.user.invitations[0]} %}invite_users{% endtrans %}</h3>
+                <h3 class="text-2xl font-semibold inline-block">{% trans %}You can invite{% endtrans %} {% trans with {'case': 'accusative', 'users': app.user.invitations[0]} %}users{% endtrans %}</h3>
                 {% if app.user.invitations[0] > 0 %}
                     {{ form_start(create_invitation_form, {'attr': {'class': 'inline'}}) }}
                         <button type="submit" class="ml-6 bg-blue-400 hover:bg-blue-500 py-1 rounded-full text-white font-bold text-xl focus:outline-none w-1/5 text-center">{% trans %}Create an invitation{% endtrans %}</button>
@@ -65,7 +66,7 @@
             {% endif %}
             {% if invited_users_photos is not empty %}
                 <div class="mt-6">
-                    <h3 class="text-2xl font-semibold mt-6">{% trans %}You invited{% endtrans %} {% trans with {'users': invited_users_photos|length} %}invite_users{% endtrans %}:</h3>
+                    <h3 class="text-2xl font-semibold mt-6">{% trans %}You invited{% endtrans %} {% trans with {'case': 'accusative', 'users': invited_users_photos|length} %}users{% endtrans %}:</h3>
                     <div class="grid grid-cols-5 gap-x-4 gap-y-4 mt-4">
                         {% for user in invited_users_photos %} 
                             <a class="flex flex-col items-center" href="{{ path('user_profile', {id: user[1]}) }}">
