--- a/templates/security/email_verification.html.twig
+++ b/templates/security/email_verification.html.twig
@@ -1,3 +1,4 @@
+{% trans_default_domain 'email_verification' %}
 {% extends 'base.html.twig' %}
 
 {% block title %}{% trans %}Verify Email{% endtrans %}{% endblock %}
