--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,3 +1,4 @@
+{% trans_default_domain 'login' %}
 {% extends 'base.html.twig' %}
 
 {% block title %}{% trans %}Log in Runotab!{% endtrans %}{% endblock %}
