--- a/templates/security/password_recovery_first.html.twig
+++ b/templates/security/password_recovery_first.html.twig
@@ -1,3 +1,4 @@
+{% trans_default_domain 'password_recovery_first' %}
 {% extends 'base.html.twig' %}
 
 {% block title %}{% trans %}Restore Password{% endtrans %}{% endblock %}
