--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -1,3 +1,4 @@
+{% trans_default_domain 'register' %}
 {% extends 'base.html.twig' %}
 
 {% block title %}{% trans %}Registration in Runotab{% endtrans %}{% endblock %}
